<resources>
    <string name="app_name">NetXMS Client</string>
    <string name="exit">Disconnect &amp; Exit</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unmanage">Unmanage</string>
    <string name="manage">Manage</string>
    <string name="version">Version</string>
    <string name="reconnect">Reconnect</string>
    <string name="tools">Tools</string>
    <string name="confirm_tool_execution">Confirm execution</string>
    <string name="no_items">No items to show&#8230;</string>
    <string name="warning">Warning</string>
    <string name="long_time_execution">This task could take a long time to execute. Would you like to proceed anyway?</string>
    <string name="crash_toast_text">NetXMS Client crashed and needs to send a report to developers</string>
    <string name="progress_gathering_data">Gathering data&#8230;</string>
    <string name="progress_processing_data">Processing data&#8230;</string>
    <string name="dashboard_title">Dashboards</string>
    <string name="main_title">Home</string>
    <string name="home">Home</string>
    <string name="home_screen_alarms">Alarms</string>
    <string name="home_screen_dashboards">Dashboards</string>
    <string name="home_screen_nodes">Nodes</string>
    <string name="home_screen_entire_network">Entire network</string>
    <string name="home_screen_graphs">Graphics</string>
    <string name="home_screen_macaddress">MACaddress</string>
    <string name="settings">Settings</string>
    <string name="pref_encrypt">Encrypt connection</string>
    <string name="pref_encrypt_summary_disabled">Connection is in clear</string>
    <string name="pref_encrypt_summary_enabled">Encryption is negotiated</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">NetXMS password</string>
    <string name="pref_login">User name</string>
    <string name="pref_login_summary">NetXMS login name</string>
    <string name="pref_server">Server</string>
    <string name="pref_server_summary">Name or address of NetXMS server</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_summary">Port of NetXMS server</string>
    <string name="pref_global">Global settings</string>
    <string name="pref_global_summary">Set global parameters (autostart on boot, &#8230;)</string>
    <string name="pref_connection">Connection</string>
    <string name="pref_connection_summary">Set connection parameters (server name, port, username, encryption, scheduler &#8230;)</string>
    <string name="pref_parameters">Parameters</string>
    <string name="pref_scheduler">Scheduler</string>
    <string name="pref_scheduler_summary">Define scheduler behaviour</string>
    <string name="pref_scheduler_enable">Enable scheduler</string>
    <string name="pref_scheduler_enabled">Scheduler is enabled</string>
    <string name="pref_scheduler_disabled">Scheduler is disabled</string>
    <string name="pref_scheduler_daily_enable">Daily scheduler</string>
    <string name="pref_scheduler_daily_enabled">Daily scheduler is enabled</string>
    <string name="pref_scheduler_daily_disabled">Daily scheduler is disabled</string>
    <string name="pref_scheduler_daily_on">Daily activation on</string>
    <string name="pref_scheduler_daily_off">Daily activation off</string>
    <string name="pref_scheduler_activation_interval">Frequency (min)</string>
    <string name="pref_scheduler_activation_interval_summary">How often connection should be established</string>
    <string name="pref_scheduler_activation_duration">Duration (min)</string>
    <string name="pref_scheduler_activation_duration_summary">For how much it should be kept on</string>
    <string name="pref_global_autostart">Auto start on boot</string>
    <string name="pref_global_autostart_enabled">Allow automatic start of service</string>
    <string name="pref_global_autostart_disabled">Block automatic start of service</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Customize notifications (toast, notification bar, &#8230;)</string>
    <string name="pref_status">Connection status</string>
    <string name="pref_alarms_summary">Customize alarms (notification bar, sounds, led colors, &#8230;)</string>
    <string name="pref_alarms">Alarms</string>
    <string name="pref_global_alarm_notification">Alarms notifications</string>
    <string name="pref_global_alarm_notification_enabled">Alarms notifications are enabled</string>
    <string name="pref_global_alarm_notification_disabled">Alarms notification are disabled</string>
    <string name="pref_global_alarm_statusbar">Status bar</string>
    <string name="pref_global_alarm_statusbar_enabled">Notifications in status bar are enabled</string>
    <string name="pref_global_alarm_statusbar_disabled">Notifications in status bar are disabled</string>
    <string name="pref_global_alarm_sound">Sound</string>
    <string name="pref_global_alarm_sound_enabled">Notifications by sound are enabled</string>
    <string name="pref_global_alarm_sound_disabled">Notifications by sound are disabled</string>
    <string name="pref_global_alarm_led">LED</string>
    <string name="pref_global_alarm_led_enabled">Notifications by LED are enabled</string>
    <string name="pref_global_alarm_led_disabled">Notifications by LED are disabled</string>
    <string name="pref_global_alarm_vibration">Vibration</string>
    <string name="pref_global_alarm_vibration_enabled">Notifications by vibration are enabled</string>
    <string name="pref_global_alarm_vibration_disabled">Notifications by vibration are disabled</string>
    <string name="pref_alarm_sound">Sound</string>
    <string name="pref_alarm_led">LED color</string>
    <string name="pref_global_alarms_settings">Global alarms settings</string>
    <string name="pref_customize_alarms_severity">Customize alarms by severity</string>
    <string name="pref_critical_alarms">Critical alarms</string>
    <string name="pref_major_alarms">Major alarms</string>
    <string name="pref_minor_alarms">Minor alarms</string>
    <string name="pref_warning_alarms">Warning alarms</string>
    <string name="pref_normal_alarms">Normal alarms</string>
    <string name="pref_global_notification_toast">Toast notification</string>
    <string name="pref_global_notification_toast_enabled">Toast is enabled</string>
    <string name="pref_global_notification_toast_disabled">Toast is disabled</string>
    <string name="pref_global_notification_icon">Icon notification</string>
    <string name="pref_global_notification_icon_enabled">Icon in status bar is enabled</string>
    <string name="pref_global_notification_icon_disabled">Icon in status bar is disabled</string>
    <string name="pref_global_notification_status">Notification behaviour</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_interface_summary">Customize interface parameters (multipliers, text size, legend, &#8230;)</string>
    <string name="pref_multipliers">Multipliers</string>
    <string name="pref_multipliers_summary">Define which multiplier to use in presenting data (last values, graphs, &#8230;)</string>
    <string name="pref_multiplier_title">Choose multiplier</string>
    <string name="pref_graph_text_size">Graph text size</string>
    <string name="pref_graph_text_size_summary">Set the text size to be used for axis labels</string>
    <string name="pref_show_legend">Show legend in graphs</string>
    <string name="pref_show_legend_enabled">Graphs will be with legend</string>
    <string name="pref_show_legend_disabled">Graphs will be without legend</string>
    <string name="notification_title">NetXMS</string>
    <string name="notify_started">NetXMS service started</string>
    <string name="notify_disconnected">Disconnected from server</string>
    <string name="notify_connected">Connected to server %1$s</string>
    <string name="notify_connecting">Connecting to server&#8230;</string>
    <string name="notify_connection_failed">Connection failed: %1$s</string>
    <string name="notify_no_connection">Data connection not available!"</string>
    <string name="notify_action_exec_fail">Cannot execute action: %1$s</string>
    <string name="notify_action_exec_success">Action executed successfully</string>
    <string name="notify_service_obj_sync_success">Objects synchronized</string>
    <string name="notify_service_obj_sync_fail">Failed to synchronize objects with server.</string>
    <string name="notify_next_connection_schedule">(next connection scheduled for %1$s)</string>
    <string name="notify_no_data">There are no data to show!</string>
    <string name="status_normal">Normal</string>
    <string name="status_warning">Warning</string>
    <string name="status_minor">Minor</string>
    <string name="status_major">Major</string>
    <string name="status_critical">Critical</string>
    <string name="status_unmanaged">Unmanaged</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_testing">Testing</string>
    <string name="view_alarms">View alarms</string>
    <string name="alarm_actions">Actions</string>
    <string name="alarm_sort">Sort</string>
    <string name="alarm_acknowledge">Acknowledge</string>
    <string name="alarm_sticky_acknowledge">Sticky acknowledge</string>
    <string name="alarm_resolve">Resolve</string>
    <string name="alarm_terminate">Terminate</string>
    <string name="alarm_viewlastvalues">View last values</string>
    <string name="alarm_selectall">Select All</string>
    <string name="alarm_unselectall">Unselect All</string>
    <string name="alarms_title">Alarms</string>
    <string name="sort_severity_asc">Sort by severity ascending</string>
    <string name="sort_severity_desc">Sort by severity descending</string>
    <string name="sort_date_asc">Sort by date ascending</string>
    <string name="sort_date_desc">Sort by date descending</string>
    <string name="sort_name_asc">Sort by node name ascending</string>
    <string name="sort_name_desc">Sort by node name descending</string>
    <string name="nodes_title">Nodes</string>
    <string name="node_unknown">&lt;Unknown&gt;</string>
    <string name="ni_last_values">Last values</string>
    <string name="ni_overview">Overview</string>
    <string name="ni_alarms">Alarms</string>
    <string name="ni_interfaces">Interfaces</string>
    <string name="overview_id">ID</string>
    <string name="overview_guid">GUID</string>
    <string name="overview_class">Class</string>
    <string name="overview_status">Status</string>
    <string name="overview_zone_id">Zone ID</string>
    <string name="overview_primary_hostname">Primary Host Name</string>
    <string name="overview_primary_ip">Primary IP</string>
    <string name="overview_system_description">System Description</string>
    <string name="overview_netxms_agent_version">NetXMS Agent Version</string>
    <string name="overview_platform_name">Platform Name</string>
    <string name="overview_boot_time">Boot Time</string>
    <string name="if_manage">Manage</string>
    <string name="if_unmanage">Unmanage</string>
    <string name="if_expected_state">Change expected state</string>
    <string name="if_expected_state_up">UP</string>
    <string name="if_expected_state_down">DOWN</string>
    <string name="if_expected_state_ignore">IGNORE</string>
    <string name="connection_point_find_switch_port">Find switch port</string>
    <string name="menu_poll">Poll</string>
    <string name="menu_poll_status">Status</string>
    <string name="menu_poll_configuration">Configuration</string>
    <string name="menu_poll_topology">Topology</string>
    <string name="menu_poll_interfaces">Interface names</string>
    <string name="navigate_to">Navigate to</string>
</resources>