<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_parameters">
        <EditTextPreference
            android:enabled="true"
            android:key="connection.server"
            android:summary="@string/pref_server_summary"
            android:title="@string/pref_server" />
        <EditTextPreference
            android:defaultValue="4701"
            android:digits="0123456789"
            android:enabled="true"
            android:key="connection.port"
            android:summary="@string/pref_port_summary"
            android:title="@string/pref_port" />
        <EditTextPreference
            android:defaultValue="admin"
            android:enabled="true"
            android:key="connection.login"
            android:summary="@string/pref_login_summary"
            android:title="@string/pref_login" />
        <EditTextPreference
            android:enabled="true"
            android:key="connection.password"
            android:password="true"
            android:summary="@string/pref_password_summary"
            android:title="@string/pref_password" />
    </PreferenceCategory>
    <PreferenceCategory
        android:enabled="true"
        android:summary="@string/pref_scheduler_summary"
        android:title="@string/pref_scheduler">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="global.scheduler.enable"
            android:summaryOff="@string/pref_scheduler_disabled"
            android:summaryOn="@string/pref_scheduler_enabled"
            android:title="@string/pref_scheduler_enable" />
        <EditTextPreference
            android:defaultValue="15"
            android:dependency="global.scheduler.enable"
            android:digits="0123456789"
            android:enabled="true"
            android:key="global.scheduler.interval"
            android:summary="@string/pref_scheduler_activation_interval_summary"
            android:title="@string/pref_scheduler_activation_interval" />
        <EditTextPreference
            android:defaultValue="1"
            android:dependency="global.scheduler.enable"
            android:digits="0123456789"
            android:enabled="true"
            android:key="global.scheduler.duration"
            android:summary="@string/pref_scheduler_activation_duration_summary"
            android:title="@string/pref_scheduler_activation_duration" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="global.scheduler.enable"
            android:key="global.scheduler.daily.enable"
            android:summaryOff="@string/pref_scheduler_daily_disabled"
            android:summaryOn="@string/pref_scheduler_daily_enabled"
            android:title="@string/pref_scheduler_daily_enable" />
        <org.netxms.ui.android.main.settings.TimePreference
            android:dependency="global.scheduler.daily.enable"
            android:key="global.scheduler.daily.on"
            android:title="@string/pref_scheduler_daily_on" />
        <org.netxms.ui.android.main.settings.TimePreference
            android:dependency="global.scheduler.daily.enable"
            android:key="global.scheduler.daily.off"
            android:title="@string/pref_scheduler_daily_off" />
    </PreferenceCategory>
</PreferenceScreen>
