<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_status">
		<ListPreference android:dialogTitle="@string/pref_global_notification_status" android:key="global.notification.status" android:title="@string/pref_global_notification_status" android:entryValues="@array/notification_status_values" android:entries="@array/notification_status_labels" android:defaultValue="3" />
        <CheckBoxPreference android:summaryOff="@string/pref_global_notification_toast_disabled" android:summaryOn="@string/pref_global_notification_toast_enabled" android:key="global.notification.toast" android:enabled="true" android:defaultValue="false" android:title="@string/pref_global_notification_toast"/>
    	<CheckBoxPreference android:summaryOff="@string/pref_global_notification_icon_disabled" android:summaryOn="@string/pref_global_notification_icon_enabled" android:key="global.notification.icon" android:enabled="true" android:defaultValue="true" android:title="@string/pref_global_notification_icon"/>
	</PreferenceCategory>
</PreferenceScreen>
