<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="org.netxms.ui.android.main.fragments.ConsolePreferencesFragment"
        android:summary="@string/pref_global_summary"
        android:title="@string/pref_global">
        <extra
            android:name="settings"
            android:value="global" />
    </header>
    <header
        android:fragment="org.netxms.ui.android.main.fragments.ConsolePreferencesFragment"
        android:summary="@string/pref_connection_summary"
        android:title="@string/pref_connection">
        <extra
            android:name="settings"
            android:value="connection" />
    </header>
    <header
        android:fragment="org.netxms.ui.android.main.fragments.ConsolePreferencesFragment"
        android:summary="@string/pref_notifications_summary"
        android:title="@string/pref_notifications">
        <extra
            android:name="settings"
            android:value="notifications" />
    </header>
    <header
        android:fragment="org.netxms.ui.android.main.fragments.ConsolePreferencesFragment"
        android:summary="@string/pref_alarms_summary"
        android:title="@string/pref_alarms">
        <extra
            android:name="settings"
            android:value="alarms" />
    </header>
    <header
        android:fragment="org.netxms.ui.android.main.fragments.ConsolePreferencesFragment"
        android:summary="@string/pref_interface_summary"
        android:title="@string/pref_interface">
        <extra
            android:name="settings"
            android:value="interface" />
    </header>
</preference-headers>
