<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:summary="@string/pref_global_summary"
        android:title="@string/pref_global">
        <intent
            android:action="org.netxms.ui.android.ConsolePreferences.global"
            android:targetClass="org.netxms.ui.android.main.activities.ConsolePreferences"
            android:targetPackage="org.netxms.ui.android" />
    </Preference>
    <Preference
        android:summary="@string/pref_connection_summary"
        android:title="@string/pref_connection">
        <intent
            android:action="org.netxms.ui.android.ConsolePreferences.connection"
            android:targetClass="org.netxms.ui.android.main.activities.ConsolePreferences"
            android:targetPackage="org.netxms.ui.android" />
    </Preference>
    <Preference
        android:summary="@string/pref_notifications_summary"
        android:title="@string/pref_notifications">
        <intent
            android:action="org.netxms.ui.android.ConsolePreferences.notifications"
            android:targetClass="org.netxms.ui.android.main.activities.ConsolePreferences"
            android:targetPackage="org.netxms.ui.android" />
    </Preference>
    <Preference
        android:summary="@string/pref_alarms_summary"
        android:title="@string/pref_alarms">
        <intent
            android:action="org.netxms.ui.android.ConsolePreferences.alarms"
            android:targetClass="org.netxms.ui.android.main.activities.ConsolePreferences"
            android:targetPackage="org.netxms.ui.android" />
    </Preference>
    <Preference
        android:summary="@string/pref_interface_summary"
        android:title="@string/pref_interface">
        <intent
            android:action="org.netxms.ui.android.ConsolePreferences.interface"
            android:targetClass="org.netxms.ui.android.main.activities.ConsolePreferences"
            android:targetPackage="org.netxms.ui.android" />
    </Preference>
</PreferenceScreen>
