<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/manage"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        android:title="@string/if_manage"
        android:visible="true"></item>
    <item
        android:id="@+id/unmanage"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        android:title="@string/if_unmanage"
        android:visible="true"></item>
    <item
        android:id="@+id/if_expected_state"
        android:title="@string/if_expected_state">
        <menu>
            <item
                android:id="@+id/if_expected_state_up"
                android:checkable="false"
                android:checked="false"
                android:enabled="true"
                android:title="@string/if_expected_state_up"
                android:visible="true"></item>
            <item
                android:id="@+id/if_expected_state_down"
                android:checkable="false"
                android:checked="false"
                android:enabled="true"
                android:title="@string/if_expected_state_down"
                android:visible="true"></item>
            <item
                android:id="@+id/if_expected_state_ignore"
                android:checkable="false"
                android:checked="false"
                android:enabled="true"
                android:title="@string/if_expected_state_ignore"
                android:visible="true"></item>
        </menu>
    </item>
    <item
        android:id="@+id/find_switch_port"
        android:enabled="true"
        android:title="@string/connection_point_find_switch_port"
        android:visible="true"></item>
</menu>
